# pytruenas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASENOTES.md  __init__.py  __main__.py  auth.py  client.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  setenv.sh
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  run.py
benchmarks/results/: pytruenas-0.1.0-py314.json  pytruenas-0.1.0-py39.json
cmd/: dump_api.py  generate_typings.py  query.py
codegen/: jinja.py
docs/: index.md
docs/api/: auth.md  client.md  fs.md  jsonrpc.md  namespace.md  reference.md
docs/guide/: api.md  cli.md  commands.md  connecting.md  filesystem.md  typings.md
lib/: example.py  generate_namespace.py  system.py
lib/example_cmds/: create_local_sshkey.py  example.py
lib/example_cmds/runpath/: 99-step.py  __main__.py  step1.py  step2.py
lib/example_cmds/runpath_example/: __main__.py  step2.py
lib/pytruenas/: __init__.py  __main__.py  _base.py  _conn.py  _core.py  _utils.py  api.py  auth.py  base.py  client.py  main.py  namespace.py  path.py  shell.py  system.py
lib/pytruenas/_codegen/: __init__.py  ns_template.py.mako  ns_template.pyi.mako
lib/pytruenas/_conn/: README.txt  client.py
lib/pytruenas/cli/: __init__.py  arg.py  cmd.py  utils.py
lib/pytruenas/cmd/: dump_api.py  query.py
lib/pytruenas/codegen/: __init__.py  jinja.py  mako.py  namespace.pyi.j2  ns_template.pyi.j2
lib/pytruenas/exts/: __init__.py
lib/pytruenas/fs/: __init__.py  api.py  local.py  sftp.py
lib/pytruenas/mixins/: __init__.py
lib/pytruenas/models/: apidump.py  jsonschema.py
lib/pytruenas/namespace/: _template.py.mako  _template.pyi.mako  auth.py  cronjob.py  system.py
lib/pytruenas/utils/: ast.py  async_.py  casing.py  cli.py  cmd.py  import_.py  io.py  logging.py  qualname.py  query.py  sql.py  target.py  text.py
lib/tn_namespace_v2_0/activedirectory/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/alert/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/alertclasses/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/alertservice/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/api_key/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/app/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/auth/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/boot/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/bootenv/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/catalog/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/certificate/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/certificateauthority/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/cloud_backup/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/cloudsync/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/config/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/container/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/core/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/cronjob/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/device/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/directoryservices/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/disk/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/dns/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/enclosure/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/failover/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/filesystem/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/ftp/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/group/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/idmap/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/initshutdownscript/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/interface/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/ipmi/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/kerberos/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/keychaincredential/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/kmip/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/kubernetes/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/ldap/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/mail/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/nfs/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/pool/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/privilege/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/replication/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/reporting/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/route/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/rsynctask/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/service/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/smart/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/smb/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/snmp/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/ssh/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/staticroute/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/stats/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/support/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/system/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0/systemdataset/: __init__.py  __init__.pyi
lib/tn_namespace_v2_0_exts/: __init__.py  system.py
lib/tn_namespace_v2_0_mixins/: __init__.py
models/: apidump.py  jsonschema.py
ops/: __init__.py  main.py  template.py
src/pytruenas/: AGENTS.md  __init__.py  __main__.py  _conn.py  auth.py  client.py  jsonrpc.py  main.py  namespace.py
tests/: apidump.py  example.py  path.py  script.py  test_async.py  test_auth.py  test_cli_call.py  test_cli_runpath.py  test_cli_targets.py  test_client.py  test_client_more.py  test_cmd_config.py  test_codegen.py  test_fs_local.py  test_fs_tnas.py  test_jsonrpc.py  test_jsonrpc_client.py  test_main.py  test_namespace.py  test_namespace_cache.py  test_namespace_retry.py  test_namespace_subscribe.py  test_ops_host.py  test_ops_midclt.py  test_ops_template.py  test_package.py  test_query.py  test_target.py  utils.py
tests/fixtures/: api_min.json
utils/: cmd.py  io.py  qualname.py  query.py
(+600 files in other folders)
