[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytruenas"
version = "0.1.0"
authors = [{ name = "Jose A." }]
description = "A typed, Pythonic client and CLI for the TrueNAS middleware API"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
dependencies = [
    "duho",
    "pathlib_next",
    "requests",
    "websocket-client",
]

[project.optional-dependencies]
# Config-file support for the CLI (YAML targets/config).
config = ["pyyaml"]
# Remote shell / SFTP filesystem backend.
ssh = ["asyncssh"]
# Typings generator (`pytruenas generate-typings`).
codegen = ["jinja2"]
# Host-side operations helpers (packaging, network adapter discovery).
host = ["ifaddr"]
dev = ["build", "hatchling", "pytest", "pytest-cov", "twine", "pyyaml", "asyncssh", "jinja2"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
pytruenas = "pytruenas.main:main"

[project.urls]
Homepage = "https://github.com/jose-pr/pytruenas/"
Issues = "https://github.com/jose-pr/pytruenas/issues"
Repository = "https://github.com/jose-pr/pytruenas"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/.agents"]

[tool.hatch.build.targets.wheel]
packages = ["src/pytruenas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
