[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytruenas"
version = "0.0.0"
authors = [{ name = "Jose A." }]
description = "A typed, Pythonic client and CLI for the TrueNAS middleware API"
readme = "README.md"
keywords = ["truenas", "middleware", "jsonrpc", "websocket", "sysadmin", "cli"]
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
dependencies = [
    # >=0.3.2: CLI parser fixes we rely on (global option before subcommand not
    # shadowed; '%' in a Cmd docstring no longer crashes parser build; directly-
    # built Cmd seeds field defaults). Validated on 0.3.3.
    "duho>=0.3.2",
    # Scheme -> port resolution, including ws/wss which no system services
    # database knows (see utils/target.py).
    "netimps>=0.0.1",
    # >=0.8.2: SftpPath importable/usable without paramiko (asyncssh-only). The
    # 'uri' extra (uritools) is needed by TnasWsPath/TruenasPath, which are UriPaths.
    # Validated on 0.8.4.
    "pathlib_next[uri]>=0.8.2",
    "requests",
    "websocket-client",
]

[project.optional-dependencies]
# Config-file support for the CLI (YAML targets/config).
config = ["pyyaml"]
# Remote shell + SFTP filesystem leg (asyncssh via pathlib_next's sftp-async).
# >=0.8.3: AsyncsshSftpBackend default concurrency 8->16 (faster recursive SFTP).
ssh = ["asyncssh", "pathlib_next[sftp-async]>=0.8.3"]
# Typings generator (`pytruenas generate-typings`).
codegen = ["jinja2"]
# Host-side operations helpers (packaging, network adapter discovery).
host = ["ifaddr"]
dev = ["build", "hatchling", "pytest", "pytest-cov", "twine", "pyyaml", "asyncssh", "jinja2"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[project.scripts]
pytruenas = "pytruenas.main:main"

[project.urls]
Homepage = "https://github.com/jose-pr/pytruenas/"
Issues = "https://github.com/jose-pr/pytruenas/issues"
Repository = "https://github.com/jose-pr/pytruenas"


# Ship the consumer-facing docs inside the installed package, so they are
# readable from site-packages via importlib.resources without the repo.
# src/pytruenas/AGENTS.md is included automatically by living in the package
# dir; the repo-root AGENTS.md is development-only and deliberately not
# shipped.
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "pytruenas/README.md"

[tool.hatch.build.targets.sdist]
exclude = ["/.*", "/.agents"]

[tool.hatch.build.targets.wheel]
packages = ["src/pytruenas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
